Homemork #5 remake after validator 2 (clients icon)

--- a/css/styles.css
+++ b/css/styles.css
@@ -453,6 +453,7 @@ body {
 
 .clients-link {
   display: flex;
+  justify-content: center;
   align-items: center;
   width: 170px;
   height: 92px;
